# gem2claude

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/cache/: manager.rs  mod.rs  models.rs
src/cli/: mod.rs
src/config/: mod.rs  models.rs
src/error/: mod.rs
src/gemini/: availability.rs  cache_models.rs  client.rs  mod.rs  streaming.rs
src/metrics/: mod.rs  registry.rs
src/models/: anthropic.rs  gemini.rs  mapping.rs  mod.rs  streaming.rs
src/oauth/: login.rs  manager.rs  mod.rs
src/server/: handlers.rs  middleware.rs  mod.rs  routes.rs
src/translation/: mod.rs  request.rs  response.rs  signature_store.rs  streaming.rs  tools.rs
src/utils/: logging.rs  mod.rs  retry.rs
src/vision/: mod.rs  models.rs  translation.rs
tests/: cache_tests.rs  error_tests.rs  model_mapping_tests.rs
